added 0.8.9 changes made to app/design/adminhtml/default/default dir

--- a/app/design/adminhtml/default/default/template/bl/customgrid/custom/column/config/unknown.phtml
+++ b/app/design/adminhtml/default/default/template/bl/customgrid/custom/column/config/unknown.phtml
@@ -14,8 +14,8 @@
  */
 ?>
 <div class="content-header">
-    <h3 class="icon-head head-adminhtml"><?php echo $this->__('Unknown Attribute Renderer') ?></h3>
+    <h3 class="icon-head head-adminhtml"><?php echo $this->__('Unknown Custom Column') ?></h3>
 </div>
 <div>
-    <?php echo $this->__('The requested attribute renderer does not exist...') ?>
+    <?php echo $this->__('The requested custom column does not exist...') ?>
 </div>
