--- a/app/design/adminhtml/default/default/template/bl/customgrid/column/renderer/collection/select.phtml
+++ b/app/design/adminhtml/default/default/template/bl/customgrid/column/renderer/collection/select.phtml
@@ -9,7 +9,7 @@
  *
  * @category   BL
  * @package    BL_CustomGrid
- * @copyright  Copyright (c) 2011 Benoît Leulliette <benoit.leulliette@gmail.com>
+ * @copyright  Copyright (c) 2012 Benoît Leulliette <benoit.leulliette@gmail.com>
  * @license    http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
 ?>
@@ -19,14 +19,12 @@
             <input type="hidden" name="<?php echo $this->getSelectName() ?>" id="<?php echo $this->getSelectId() ?>" value="<?php echo $this->htmlEscape($_renderer['code']) ?>" />
             <?php echo $this->htmlEscape($_renderer['name']) ?>
             <?php if ($this->getParamsTargetId() != ''): ?>
-                <span class="blcg-collection-renderers-config-button" id="<?php echo $this->getHtmlId() ?>-config-button" title="<?php echo $this->__('Configuration') ?>" style="display:none;"></span>
+                <span class="blcg-collection-renderers-config-button" id="<?php echo $this->getConfigButtonId() ?>" title="<?php echo $this->__('Configuration') ?>" style="display:none;"></span>
             <?php endif ?>
             <span class="blcg-collection-renderers-help-button" onclick="blcgDisplayCollectionRenderersHelp();" title="<?php echo $this->__('Help') ?>"></span>
         </div>
         <script type="text/javascript">
-        //<![CDATA[
-            var <?php echo $this->getJsObjectName() ?> = new blcg.CollectionRenderer.Select('<?php echo $this->getSelectId() ?>', <?php echo $this->getRenderersJsonConfig(false, $this->getRendererCode()) ?>, '<?php echo $this->getHtmlId() ?>-config-button', '<?php echo $this->getParamsTargetId() ?>', '<?php echo $this->helper('adminhtml')->getUrl('customgrid/column_renderer_collection/index') ?>');
-        //]]>
+            <?php echo $this->getJsObjectName() ?> = new blcg.Renderer.Collection.Select('<?php echo $this->getSelectId() ?>', <?php echo $this->getRenderersJsonConfig(false, $this->getRendererCode()) ?>, '<?php echo $this->getConfigButtonId() ?>', '<?php echo $this->getParamsTargetId() ?>', '<?php echo $this->getConfigUrl() ?>');
         </script>
     <?php else: ?>
         <span class="nobr"><?php echo $this->htmlEscape($this->getForcedRendererLabel()) ?></span>
@@ -39,15 +37,13 @@
         <?php endforeach ?>
         </select>
         <?php if ($this->getParamsTargetId() != ''): ?>
-            <span class="blcg-collection-renderers-config-button" id="<?php echo $this->getHtmlId() ?>-config-button" title="<?php echo $this->__('Configuration') ?>" style="display: none;"></span>
+            <span class="blcg-collection-renderers-config-button" id="<?php echo $this->getConfigButtonId() ?>" title="<?php echo $this->__('Configuration') ?>" style="display:none;"></span>
         <?php endif ?>
         <span class="blcg-collection-renderers-help-button" onclick="blcgDisplayCollectionRenderersHelp();" title="<?php echo $this->__('Help') ?>"></span>
     </div>
     <?php if ($this->getParamsTargetId() != ''): ?>
         <script type="text/javascript">
-        //<![CDATA[
-            var <?php echo $this->getJsObjectName() ?> = new blcg.CollectionRenderer.Select('<?php echo $this->getSelectId() ?>', <?php echo $this->getRenderersJsonConfig() ?>, '<?php echo $this->getHtmlId() ?>-config-button', '<?php echo $this->getParamsTargetId() ?>', '<?php echo $this->helper('adminhtml')->getUrl('customgrid/column_renderer_collection/index') ?>');
-        //]]>
+            <?php echo $this->getJsObjectName() ?> = new blcg.Renderer.Collection.Select('<?php echo $this->getSelectId() ?>', <?php echo $this->getRenderersJsonConfig() ?>, '<?php echo $this->getConfigButtonId() ?>', '<?php echo $this->getParamsTargetId() ?>', '<?php echo $this->getConfigUrl() ?>');
         </script>
     <?php endif ?>
 <?php endif ?>
