--- a/app/design/adminhtml/default/default/template/bl/customgrid/widget/grid/columns/editor.phtml
+++ b/app/design/adminhtml/default/default/template/bl/customgrid/widget/grid/columns/editor.phtml
@@ -9,7 +9,7 @@
  *
  * @category   BL
  * @package    BL_CustomGrid
- * @copyright  Copyright (c) 2011 Benoît Leulliette <benoit.leulliette@gmail.com>
+ * @copyright  Copyright (c) 2012 Benoît Leulliette <benoit.leulliette@gmail.com>
  * @license    http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
 ?>
@@ -19,6 +19,6 @@
 ?>
 <script type="text/javascript">
 //<![CDATA[
-    <?php echo $this->getJsObjectName() ?> = new blcg.GridEditor('<?php echo $this->getGridTableId() ?>', <?php echo $this->getEditableColumnsJsonConfig() ?>, <?php echo $this->getRowsJsonConfig() ?>, <?php echo $this->getAdditionalParamsJson() ?>, <?php echo $this->getGlobalParamsJson() ?>, <?php echo $this->getErrorMessagesJson() ?>);
+    <?php echo $this->getJsObjectName() ?> = new blcg.Grid.Editor('<?php echo $this->getGridTableId() ?>', <?php echo $this->getEditableColumnsJsonConfig() ?>, <?php echo $this->getRowsJsonConfig() ?>, <?php echo $this->getAdditionalParamsJson() ?>, <?php echo $this->getGlobalParamsJson() ?>, <?php echo $this->getErrorMessagesJson() ?>);
 //]]>
 </script>
