--- a/app/design/adminhtml/default/default/template/bl/customgrid/widget/grid/form/container.phtml
+++ b/app/design/adminhtml/default/default/template/bl/customgrid/widget/grid/form/container.phtml
@@ -9,7 +9,7 @@
  *
  * @category   BL
  * @package    BL_CustomGrid
- * @copyright  Copyright (c) 2011 Benoît Leulliette <benoit.leulliette@gmail.com>
+ * @copyright  Copyright (c) 2012 Benoît Leulliette <benoit.leulliette@gmail.com>
  * @license    http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
 ?>
@@ -45,20 +45,35 @@
     <script type="text/javascript">
     //<![CDATA[
         blcgGridEditForm = new varienForm('<?php echo $this->getFormElementId() ?>');
-        blcgGridEditForm.submit = function(){
+        blcgGridEditForm.submit = function(url){
+            if (typeof(varienGlobalEvents) != 'undefined') {
+                varienGlobalEvents.fireEvent('blcgGridEditFormStartSubmit', this.formId);
+            }
             if (this.validator && this.validator.validate()) {
                 <?php if ($_jsObjectName): ?>
                 if (typeof(<?php echo $_jsObjectName ?>) != 'undefined') {
-                    if (varienGlobalEvents) {
-                        varienGlobalEvents.fireEvent('formSubmit');
+                    if (typeof(varienGlobalEvents) != 'undefined') {
+                        varienGlobalEvents.fireEvent('formSubmit', this.formId);
                     }
+                    
+                    this.errorSections = $H({});
+                    this.canShowError  = true;
+                    this.submitUrl = url;
+                    
+                    if (typeof(tinyMceEditors) != 'undefined') {
+                        tinyMCE.triggerSave();
+                    }
+                    if (typeof(varienGlobalEvents) != 'undefined') {
+                        varienGlobalEvents.fireEvent('blcgGridEditFormLaunchSubmit', this.formId);
+                    }
+                    
                     <?php echo $_jsObjectName ?>.validateEdit($(this.formId).serialize(true));
                 } else {
                     alert('<?php echo $this->jsQuoteEscape($this->__('Can\'t save value : editor JS object can\'t be found')) ?>');
                 }
                 <?php else: ?>
                     alert('<?php echo $this->jsQuoteEscape($this->__('Can\'t save value : editor JS object can\'t be found')) ?>');
-                <?php endif ?>                                                                   
+                <?php endif ?>
             }
             return false;
         }.bind(blcgGridEditForm);
